--- a/hello-view.fxml
+++ b/hello-view.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="646.0" prefWidth="785.0" style="-fx-background-color: snow;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.books.controller.HelloController">
    <children>
@@ -29,13 +30,19 @@
             <Font name="Rekha" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="393.0" layoutY="437.0" prefHeight="39.0" prefWidth="265.0" text="Already a bookworm">
+      <Label layoutX="394.0" layoutY="361.0" prefHeight="39.0" prefWidth="265.0" text="Already a bookworm">
          <font>
             <Font name="Rekha" size="28.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnSignUp" buttonType="RAISED" layoutX="470.0" layoutY="316.0" onAction="#btnSignUpOnAction" prefHeight="31.0" prefWidth="88.0" style="-fx-background-color: #8E7AB5;" text="SignUp" underline="true" />
-      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="470.0" layoutY="488.0" onAction="#btnLoginOnAction" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: E493B3;" text="Login" underline="true" />
+      <JFXButton fx:id="btnSignUp" buttonType="RAISED" layoutX="469.0" layoutY="301.0" onAction="#btnSignUpOnAction" prefHeight="31.0" prefWidth="88.0" style="-fx-background-color: #8E7AB5;" text="SignUp" underline="true" />
+      <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="474.0" layoutY="421.0" onAction="#btnLoginOnAction" prefHeight="31.0" prefWidth="79.0" style="-fx-background-color: E493B3;" text="Login" underline="true" />
+      <Text layoutX="392.0" layoutY="504.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Are you a Admin?" wrappingWidth="127.7294921875" />
+      <Text fx:id="textLogin" fill="#3e35bf" layoutX="540.0" layoutY="504.0" onMouseClicked="#LoginOnMouseClicked" strokeType="OUTSIDE" strokeWidth="0.0" text="Login here" underline="true" wrappingWidth="79.0">
+         <font>
+            <Font name="Rekha" size="16.0" />
+         </font>
+      </Text>
     
    </children>
 </AnchorPane>
